2010-08-18  Ryan Nunn <colourles@users.sourceforge.net>
	* audio/Midi.cc, audio/midi_drivers/* : Changed the way how MT32 Sysex data
	  and timbre loading is handled to improve startup time. Things are now 
	  setup to preload the required timbers and patches used by songs as they 
	  are loaded, rather than loading then entire timbre bank as done 
	  previously. Added two config settings to control timbre precaching, 
	  "config/audio/midi/precacheTimbers/onStartup" (default no) and 
	  "config/audio/midi/precacheTimbers/onPlay" (default yes). It should be 
	  unnecessary to change those two settings.	
	* other files : Fixing up various compiler warnings

2010-08-18  Ryan Nunn <colourles@users.sourceforge.net>
	* imagewin/imagewin.cc, imagewin/manip.h : Reenabling colour swapped 
	  optimized 555 and 565 scalers. Found the issues and fixed them.

2010-08-18  Ryan Nunn <colourles@users.sourceforge.net>
	* imagewin/imagewin.* : Attempting to work around problems experienced by 
	  Dominik. Checks for Windowed surface format support is now done at 
	  startup. Changed things so if SDL_VideoModeOK() checks fail, Exult still
	  still attempts to create the surface anyway. Disabled colour swapped 555 
	  and 565 optimized scalers.

2010-08-17  Ryan Nunn <colourles@users.sourceforge.net>
	* exult.cc, imagewin/* : Cleaning up scaler handling code, fixing bugs,
	  generally making things more flexible for future changes.
	* shapes/baseinf.h : Fixing a compiler warning

2010-08-17 Dominik Reichardt <dominus@users.sourceforge.net>
	* imagewin/imagewin.cc : commented out the SDL_VideoModeOK check before 
	  switching to fullscreen. This hopefully allows everyone to toggle 
	  fullscreen again. Please let us know.
	
2010-08-15 Dominik Reichardt <dominus@users.sourceforge.net>
	* Updated Documentation and FAQ
	
2010-08-13  Ryan Nunn <colourles@users.sourceforge.net>
	* audio/RawAudioSample.cc : Fixing crashes on PPC Macs

2010-07-28	Marzo Sette Torres Junior <marzojr@yahoo.com>